Fix Pedram View

--- a/WebApplication2/Views/Home/Pedram.cshtml
+++ b/WebApplication2/Views/Home/Pedram.cshtml
@@ -1,30 +1,18 @@
-﻿@model IEnumerable<WebApplication2.Program>
+﻿@model WebApplication2.Program
 
 @{
     ViewData["Title"] = "Pedram";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Pedram</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>I think, therefore I am</th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div>
+    <h4>Program</h4>
+    <hr />
+    <dl class="dl-horizontal">
+    </dl>
+</div>
+<div>
+    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    <a asp-action="Index">Back to List</a>
+</div>
